# MView6

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml  windows.yml
doc/: NAVIGATION.md  README-WINDOWS.txt
resources/: mv6-help-1.svgz  mv6-help-2.svgz  mview6.css  mview6.gresource.xml
src/: category.rs  config.rs  error.rs  main.rs  rect.rs  util.rs
src/application/: imp.rs  mod.rs
src/backends/: archive_mar.rs  archive_rar.rs  archive_zip.rs  bookmarks.rs  document.rs  filesystem.rs  mod.rs  none.rs  pdf.rs
src/backends/document/: mod.rs  mupdf.rs  pdfium.rs  pdfium_loader.rs  pdfium_with.rs
src/backends/thumbnail/: mod.rs  model.rs  processing.rs
src/classification/: file_formats.rs  mod.rs
src/content/: analyze.rs  analyze2.rs  analyze_text.rs  content2.rs  content_type.rs  loader.rs  mod.rs  paginated.rs  preview.rs
src/file_view/: cursor.rs  imp.rs  mod.rs  model.rs  sort.rs
src/file_view/imp/: cursor.rs  model.rs  sort.rs
src/image/: animation.rs  colors.md  colors.rs  draw.rs  mod.rs
src/image/provider/: gdk.rs  image_rs.rs  internal.rs  mod.rs  surface.rs  webp.rs
src/image/svg/: creator.rs  draw.rs  hexview.rs  highlight.rs  mod.rs  svg_notes.md  text_sheet.rs
src/image/view/: data.rs  imp.rs  measure.rs  mod.rs  svg.rs  zoom.rs
src/image/view/data/: mod.rs  redraw.rs  zoom.rs
src/info_view/: imp.rs  mod.rs
src/profile/: README.md  memory.rs  mod.rs  performance.rs
src/render_thread/: mod.rs  model.rs  sender.rs  worker.rs
src/window/: filter.rs  imp.rs  mod.rs
src/window/imp/: actions.rs  backend.rs  commands.rs  dependencies.rs  filter.rs  keyboard.rs  menu.rs  mouse.rs  navigate.rs  palette copy.rs  palette.rs  panel.rs  redraw.rs  resize.rs  slideshow.rs  sort.rs
tools/: create_colors.py  getdlls  install-hooks.sh
tools/commands/: commands.yaml  gen_commands.py
tools/hooks/: pre-commit
tools/linux/: deps.py
tools/linux/debian/DEBIAN/: postinst
tools/linux/debian/usr/share/applications/: org.vanderwerff.mview.mview6.desktop
tools/rpi/: build-cross-rpi.sh  docker-rpi.sh
tools/windows/: getdlls  getdlls.sh
tools/windows/msi/: create_wxs.py
