[package]
name = "MView6"
version = "6.0.0-dev"
edition = "2021"
authors = ["Martin van der Werff <github@newinnovations.nl>"]
description = "High-performance PDF and photo viewer built with Rust and GTK4"
repository = "https://github.com/newinnovations/mview6"
license = "AGPL"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2024-2025 Martin van der Werff"

[dependencies]
async-channel = "2.3.1"
cairo-rs = { version = "0.21", features = ["v1_16"] }
chrono = "0.4.38"
convert_case = "0.8.0"
dirs = "6.0.0"
gdk-pixbuf = { version = "0.21", features = ["v2_42"] }
gio = { version = "0.21", features = ["v2_72"] }
glib = { version = "0.21", features = ["v2_72"] }
gtk4 = { version = "0.10", features = ["v4_6"] }
human_bytes = { version = "0.4.3", features = ["fast"], default-features = false }
image = { version = "0.25.6", features = ["avif-native"] }
image-webp = "0.2.1"
kamadak-exif = "0.6.1"
# mupdf = { path = "../mupdf-rs", features = ["sys-lib-libjpeg"]}
mupdf = { git = "https://github.com/messense/mupdf-rs.git", features = ["sys-lib-libjpeg"]}
# pdfium = { path = "../pdfium-rs" }
pdfium = "0.9"
# rsvg = { package = "librsvg-rebind", version = "0.1.0" }
regex = "1.10.4"
resvg = "0.45.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
unrar = "0.5.3"
zip = "4.0.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[build-dependencies]
glib-build-tools = "0.20.0"
winresource = "0.1"
